--- a/app/src/main/res/drawable/ic_send.xml
+++ b/app/src/main/res/drawable/ic_send.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="32dp"
+    android:height="32dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!-- Bold upward arrow for Send -->
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+        android:pathData="M12,2L12,2c0.4,0 0.78,0.16 1.06,0.44l5.5,5.5c0.59,0.59 0.59,1.54 0,2.12c-0.59,0.59 -1.54,0.59 -2.12,0L13.5,7.12V20.5c0,0.83 -0.67,1.5 -1.5,1.5s-1.5,-0.67 -1.5,-1.5V7.12l-2.94,2.94c-0.59,0.59 -1.54,0.59 -2.12,0c-0.59,-0.59 -0.59,-1.54 0,-2.12l5.5,-5.5C11.22,2.16 11.6,2 12,2z"/>
 </vector>
